[package]
name = "benches"
description = "Benchmarks for the USDv"
publish = false
readme = "README.md"

version = "0.0.1"
rust-version = "1.85.0"
edition = "2024"

exclude = ["assets/*", ".github", "Makefile.toml", "*.log", "tags"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md",
    "../katex-header.html"
]

authors = ["IteraLabs.xyz"]
documentation = "https://docs.rs/usdv/"
repository = "https://github.com/iteralabs/usdv"
homepage = "https://iteralabs.ai/usdv"
keywords = ["framework", "math", "crypto"]
categories = ["data-structures", "development-tools", "finance"]
license = "MIT"

[dependencies]

criterion = { version = "0.5", features = ["html_reports"] }
memuse = { version = "0.2.0" }
human_bytes = { version = "0.4.1" }
